# matrix

./: .gitmodules  LICENSE  README.md  TODO.txt  glyph order.txt  gpgpu_example.html  gpgpu_matrix.html  index.html  main.js  matrix.js  msdf_command.txt  prettier_command.txt  project.json  unraveled.js  webgpu_notes.txt
assets/: raindrop_placeholder.m4a  raindrop_placeholder.webm
js/: ColorMapPass.js  FilmGrainPass.js  HorizontalColorationPass.js  ImageOverlayPass.js  MatrixGeometry.js  MatrixMaterial.js  MatrixRenderer.js  audio.js  bloomPass.js  camera.js  colorPass.js  config.d.ts  config.js  imagePass.js  main.js  palettePass.js  rainPass.js  regl_main.js  renderer.js  resurrectionPass.js  std140.js  stripePass.js  utils.js  wallpaperEngine.js  webgpu_main.js
js/regl/: bloomPass.js  imagePass.js  lkgHelper.js  main.js  mirrorPass.js  palettePass.js  quiltPass.js  rainPass.js  resurrectionPass.js  ripplesPass.js  stripePass.js  utils.js
lib/: gl-matrix.js  gpu-buffer.js  gpu-uniforms.js  holoplaycore.module.js  regl.js  webgl-debug.js
playdate/: .gitignore  INSTRUCTIONS.md
playdate/matrix_c/: CMakeLists.txt  main.c  pdxinfo
playdate/matrix_c/Source/: pdxinfo
playdate/matrix_c/Source/images/launcher/card-highlighted/: animation.txt
shaders/: blur.frag  highPass.frag  imagePass.frag  palettePass.frag  rain.frag  rain.vert  rainPass.compute  rainPass.compute.frag.glsl  rainPass.frag  rainPass.frag.wgsl  rainPass.vert  rainPass.vert.wgsl  rainRenderPass.wgsl  render.frag  render.vert  resurrectionPass.frag  stripePass.frag  stripePass.frag.glsl  update.frag
(+49 files in other folders)
